--- a/writeup.Rmd
+++ b/writeup.Rmd
@@ -17,6 +17,8 @@ The data has transactional data for customers shopping at Walmart.
 
 The data consists of 7 columns: TripType, VisitNumber, Weekday, Upc, ScanCount, DepartmentDescription, and FinelineNumber. The TripType is an id that represents the type of trip the customer made. This is the variable we are going to be predicting. The VisitNumber is an id depicting a trip made by a customer. Weekday is the weekday of the trip. UPC which is the Unique Product Code is the unique code associated with the product. ScanCount is the quantity of that particular item bought. A negative value here means the item was returned. DepartmentDescription is a broad description of the item's department. FinelineNumber is a more refined category for each of the products, created by Walmart.
 
+We explored the UPC. The length varies from 4 to 12, but is mostly either 10, 11 or 12. The first five digits when the length is 10, and digits 2 to 6 when the length is 11 or 12 stand for the Manufacturer code. The next 2 stand for the Family code, and the next 3 for the Value code of the item. We could use this to see that within a Department which manufacturer is the most popular. The value code gives an idea of the coupon associated with the item. 
+
 Each shopping trip is categorised based on the items purchased in each trip. For example: a trip may be small daily dinner trip, a weekly large grocery trip, or a holiday trip.
 
 There's two sets of data: the training set and the test set. The training set contains the trips with the TripType included. There are a total of 38 distinct trip types that Walmart has come up with. And the data has 65,535 rows.
